<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lab1"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/nav_lab2"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/nav_lab3"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/nav_lab4"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/nav_lab5"
            android:title="@string/menu_5" />

    </group>

</menu>
