<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_lab1"
        android:name="com.example.myapplication.ui.Lab1.Lab1Fragment"
        android:label="@string/menu_1"
        tools:layout="@layout/fragment_lab1" />

    <fragment
        android:id="@+id/nav_lab2"
        android:name="com.example.myapplication.ui.Lab2.Lab2Fragment"
        android:label="@string/menu_2"
        tools:layout="@layout/fragment_lab2" />

    <fragment
        android:id="@+id/nav_lab3"
        android:name="com.example.myapplication.ui.Lab3.Lab3Fragment"
        android:label="@string/menu_3"
        tools:layout="@layout/fragment_lab3" />

    <fragment
        android:id="@+id/nav_lab4"
        android:name="com.example.myapplication.ui.Lab4.Lab4Fragment"
        android:label="@string/menu_4"
        tools:layout="@layout/fragment_lab4" />

    <fragment
        android:id="@+id/nav_lab5"
        android:name="com.example.myapplication.ui.Lab5.Lab5Fragment"
        android:label="@string/menu_5"
        tools:layout="@layout/fragment_lab5" />
</navigation>